assets/stylesheets/shared/header.css.scss
#site-logo {
  height: 27px;
}

.d-header {
  box-shadow: none;
  height: 100px;
  padding: 0;

  .current-user {
    padding-right: 10px;
  }

  .contents {
    padding: 25px 0 10px;
    margin: 0;
  }

  .icons {
    [class^='fa fa-'] {
      width: auto;
      height: auto;
    }

    li {
      margin-right: 5px;
    }

    a.icon {
      padding: 0;
      border-radius: 50%;
      height: 32px;
      width: 32px;
      border-width: 0;
      overflow: hidden;

      &:hover {
        border-width: 0;
      }
    }

    .active {
      a.icon {
        border-width: 0;
      }
    }

    i.fa-envelope:before {
      position: relative;
      top: -3px;
      font-size: 20px;
    }
  }

  .logo-small {
    max-height: 34px;
    margin-top: -6px;
  }

  .topic-link {
    font-weight: 300;
    font-size: 25px;
    height: 30px;
    line-height: 28px;
    margin-top: -4px;
    color: #fff;
  }

  button.login-button,
  button.sign-up-button {
    margin-top: 2px;
  }
}

.drop-down {
  @extend .bg-color--black-dark;
  border: none;
  box-shadow: none;

  ul {
    padding: 0;
  }

  .badge-wrapper.bullet span.badge-category {
    color: #fff !important;
  }

  a {
    color: #fff;
    &:hover {
      background-color: #00afd7 !important;
      text-decoration: none;
    }
  }
}

.top-bar {
  a {
    @extend .color--white;
  }

  .search {
    float: right;
    text-align: right;
    list-style: none;
  }

  .nav {
    background: none;
    margin: 0 -1em;

    li::after {
      display: none;
    }

    a {
      padding: 1em;

      &:hover {
        background: none;
      }
    }
  }

  #site-map {
    color: #00afd7;
  }

  #search-button {
    margin-right: 0;
    background: none;
    color: #fff;
  }

  #search-dropdown {
    background: #fff;
    margin-right: 45px;
    margin-top: 12px;
    box-shadow: 0 0 3px #000;

    .show-help {
      color: #000;
    }
  }
}

.top-nav {
  margin: 0;
  padding: 0;
  list-style-type: none;
  float: left;

  li {
    position: relative;
    display: inline-block;
    margin: 0 78px 0 0;

    &.dropdown {
      a { display: inline-block; }
    }

    &.active {
      .fa { transform: rotate(180deg); }
    }

    &:last-child { margin: 0; }
  }

  a { display: block; }

  .fa {
    margin-left: 3px;
    color: #ff808b;
    font-size: 11px;
    transition: transform .1s linear;
  }
}

.top-nav-dropdown {
  padding: 0;
  border: 0;
  right: auto;
  left: 0;

  li:not(.category):not(.heading) {
    display: block;
    margin: 0;

    a {
      padding: 8px 16px;
      color: #464646;
    }

    &:hover {
      a:not(.badge-notification) {
        background-color: #464646;
        color: #fff;
      }
    }
  }
}

a.social-link {
  height: 30px;
  width: 30px;
  display: inline-block;
  border-radius: 50%;
  text-align: center;

  &:hover {
    color: #fff;
  }
}

.social-connections {
  margin-top: 10px;
  padding: 0 5px 0 0;
}

